// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button keeps the container the same when switching between isLoading and not isLoading 1`] = `
500;700;900&display=swap'); .c0 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1rem;
  line-height: 0;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #d3d6d7;
  color: #252c35;
}

.c0:hover {
  background-color: #c6cacb;
}

.c0:active {
  background-color: #b8bdbf;
}

.c1 {
  background: linear-gradient( 45deg, rgba(255,255,255,0.75), rgba(0,0,0,0.75), rgba(255,255,255,0.75), rgba(0,0,0,0.75), rgba(255,255,255,0.75) ) repeat;
  background-size: 400% 100%;
  width: 6rem;
  height: 16px;
  border-radius: 9999px;
  -webkit-animation: ia-dwnO 8s linear infinite;
  animation: ia-dwnO 8s linear infinite;
  line-height: 0;
}

<button
  class="c0"
  data-test-id="hsui-button"
  elevation="0"
  type="default"
>
  <div
    class="c1"
  />
</button>
`;

exports[`Button keeps the container the same when switching between isLoading and not isLoading 2`] = `
500;700;900&display=swap'); .c0 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1rem;
  line-height: 0;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #d3d6d7;
  color: #252c35;
}

.c0:hover {
  background-color: #c6cacb;
}

.c0:active {
  background-color: #b8bdbf;
}

.c1 {
  display: inline-block;
  margin-top: -8px;
  margin-bottom: -8px;
}

<button
  class="c0"
  data-test-id="hsui-button"
  elevation="0"
  type="default"
>
  <span
    class="c1"
  >
    Submit
  </span>
</button>
`;

exports[`Button shows loading text when provided 1`] = `
500;700;900&display=swap'); .c0 {
  display: inline-block;
  font-family: Montserrat,Roboto,sans-serif;
  font-size: 1rem;
  line-height: 0;
  padding: 1.25em 1em;
  border-radius: 0.25em;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.6));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #d3d6d7;
  color: #252c35;
}

.c0:hover {
  background-color: #c6cacb;
}

.c0:active {
  background-color: #b8bdbf;
}

.c1 {
  background: linear-gradient( 45deg, rgba(255,255,255,0.75), rgba(0,0,0,0.75), rgba(255,255,255,0.75), rgba(0,0,0,0.75), rgba(255,255,255,0.75) ) repeat;
  background-size: 400% 100%;
  width: 6rem;
  height: 16px;
  border-radius: 9999px;
  -webkit-animation: ia-dwnO 8s linear infinite;
  animation: ia-dwnO 8s linear infinite;
  line-height: 0;
}

<div>
  <button
    class="c0"
    data-test-id="hsui-button"
    elevation="0"
    type="default"
  >
    <div
      class="c1"
    />
  </button>
</div>
`;
